<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.devsummit.devsummit.io.devsummit.native_android.Activities.RegisterActivity"
    android:background="@drawable/background_3x"
    android:gravity="center">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_margin="24dp"
        android:src="@drawable/logo_2x" />

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:nestedScrollingEnabled="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_border_edittext"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="#FFFFFF"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_border_edittext"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="#FFFFFF"
            android:textCursorDrawable="@null" />

        <Button
            android:id="@+id/email_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorPrimaryButtonOrange"
            android:text="@string/action_sign_in_short"
            android:textColor="#ffffff"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <Button
            android:id="@+id/phone_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:backgroundTint="@color/colorPrimaryButtonYellow"
            android:text="@string/action_phone_sign_in"
            android:textColor="#ffffff"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="12dp">

            <TextView
                android:id="@+id/alreadyHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:text="@string/dont_have_account"
                android:textAllCaps="true"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:backgroundTint="@color/colorTransparent"
                android:text="@string/register"
                android:onClick="onRegisterButtonClicked"
                android:textColor="@color/colorPrimaryButtonYellow" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>

