<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.devsummit.devsummit.RegisterActivity"
    android:background="@drawable/background_3x">

    <ImageView
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:src="@drawable/logo_2x"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintHorizontal_bias="0.503"
        android:id="@+id/logo"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <Button
        android:id="@+id/registerWithEmail"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/colorPrimaryButtonOrange"
        android:onClick="clickRegisterWithEmail"
        android:text="@string/register_with_email"
        android:textColor="#ffffff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Button
        android:id="@+id/registerWithPhone"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorPrimaryButtonYellow"
        android:onClick="clickRegisterWithPhone"
        android:text="@string/register_with_phone"
        android:textColor="#ffffff"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerWithEmail" />

    <TextView
        android:id="@+id/alreadyHaveAccount"
        android:layout_width="189dp"
        android:layout_height="22dp"
        android:text="@string/already_have_account"
        app:layout_constraintRight_toLeftOf="@+id/signInButton"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/registerWithPhone"
        android:layout_marginRight="0dp"
        android:layout_marginLeft="32dp"
        android:textColor="#FFFFFF"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        app:layout_constraintBaseline_toBaselineOf="@+id/alreadyHaveAccount"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/alreadyHaveAccount"
        android:layout_marginRight="32dp"
        android:backgroundTint="@color/colorTransparent"
        android:textColor="@color/colorPrimaryButtonYellow"
        android:background="@android:color/transparent" />
</android.support.constraint.ConstraintLayout>
