<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_3x"
    tools:context="io.devsummit.devsummit.Activities.FormRegisterActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/logo_2x"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_border_edittext"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:textColor="#FFFFFF"
            android:textCursorDrawable="@null"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_border_edittext"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:textColor="#FFFFFF"
            android:textCursorDrawable="@null"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstName" />

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_border_edittext"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            android:textColor="#FFFFFF"
            android:textCursorDrawable="@null"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastName" />

        <CheckBox
            android:id="@+id/use_referer_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="38dp"
            android:layout_marginTop="16dp"
            android:buttonTint="@color/colorEditTextHintColor"
            android:text="@string/use_referer"
            android:textColor="@color/colorEditTextHintColor"
            android:textSize="18dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <EditText
            android:id="@+id/refererName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_border_edittext"
            android:ems="10"
            android:hint="@string/referer_name"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:textColor="#FFFFFF"
            android:textCursorDrawable="@null"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/use_referer_checkbox" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/colorPrimaryButtonOrange"
            android:onClick="onRegisterWithEmailClicked"
            android:text="@string/user_register_button"
            android:textColor="#ffffff"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/refererName" />

        <TextView
            android:id="@+id/alreadyHaveAccount"
            android:layout_width="189dp"
            android:layout_height="22dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="24dp"
            android:text="@string/already_have_account"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/signInButton"
            app:layout_constraintTop_toBottomOf="@+id/registerButton" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="32dp"
            android:background="@android:color/transparent"
            android:backgroundTint="@color/colorTransparent"
            android:text="@string/sign_in"
            android:textColor="@color/colorPrimaryButtonYellow"
            app:layout_constraintBaseline_toBaselineOf="@+id/alreadyHaveAccount"
            app:layout_constraintLeft_toRightOf="@+id/alreadyHaveAccount"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>